basic_services/common/00-leaf-image-management-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "leaf-image-management-system"
  labels:
    name: "leaf-image-management-system"
    monitored-by: "prometheus"
